--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Makerhub Amal Jyothi IEDC</title>
+	<title>Contact - Makerhub Amal Jyothi IEDC</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Bergin S Russel">
 	<meta name="description" content="The Innovation and Entrepreneurship Development Centre (IEDC) is an initiative of National Science and Technology Entrepreneurship Development Board (NSTEDB), Department of Science and Technology (DST), New Delhi. The aim was to develop an institutional mechanism to create entrepreneurial culture in academic institutions to foster growth of innovation and entrepreneurship amongst the faculty and students.
@@ -46,7 +46,15 @@ Every year this centre provides financial support to a good number of students f
 	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89026432-4"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
+		gtag('config', 'UA-89026432-4');
+		</script>
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -232,6 +240,19 @@ Every year this centre provides financial support to a good number of students f
 	<script src="js/magnific-popup-options.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5a957a524b401e45400d3f8a/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 	</body>
 </html>
