--- a/iprcell.html
+++ b/iprcell.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Makerhub Amal Jyothi IEDC</title>
+	<title>IPR Cell of KSCSTE - Amal Jyothi COllege of Engineering</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Bergin S Russel">
 	<meta name="description" content="The Innovation and Entrepreneurship Development Centre (IEDC) is an initiative of National Science and Technology Entrepreneurship Development Board (NSTEDB), Department of Science and Technology (DST), New Delhi. The aim was to develop an institutional mechanism to create entrepreneurial culture in academic institutions to foster growth of innovation and entrepreneurship amongst the faculty and students.
@@ -46,7 +46,15 @@ Every year this centre provides financial support to a good number of students f
 	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89026432-4"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
+		gtag('config', 'UA-89026432-4');
+		</script>
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -99,7 +107,7 @@ Every year this centre provides financial support to a good number of students f
 	<section id="gtco-about" data-section="about">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn"><br><br><br>
 				  <h1>IPR Cell of KSCSTE</h1>
 				  <p class="sub text-justify">The Patent Information Centre (PIC-Kerala) under the Kerala State Council for Science, Technology and Environment (KSCSTE) has established an Intellectual Property Rights Cell (IPR Cell) in the Amal Jyothi College of Engineering (AJCE), Kanjirappally. This is the first IPR Cell establishing by KSCSTE in any one of the self-financing colleges in Kerala. The IPR Cell commenced its function in the college on September 27th, 2013 following its inauguration by Mr. P.H. Kurian IAS, Principal Secretary, IT and Industries, Govt. of Kerala. Dr. Jippu Jacob, Professor, Department of Mechanical Engineering is its Co-ordinator. Anyone who seeks information on patents or assistance in the filing of patent application may approach the Co-ordinator of IPR Cell in AJCE. Amal Jyothi College of Engineering is giving much priority for research and development activities. Because of the inspiration and support from faculty members and different steps taken by the Research and development department, many of our students spend significant amount of time and efforts for research activities. For each innovative project, we provide one or more faculty mentors for guiding the team the right way. All these steps are positively motivating our students to develop innovative products as part of their project work or by their research interest.</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Objectives</p>
@@ -175,10 +183,9 @@ Every year this centre provides financial support to a good number of students f
 		          						  </div>	  
 					</div></div>
               </div>
-		</div>
+		</div></div>
 	</section>
 
-	
 	<footer id="gtco-footer" role="contentinfo" style="background-color:#222229"><font color="#B3B3B3">
 			<div class="container" >
 			       <div class="row">
@@ -244,7 +251,7 @@ Every year this centre provides financial support to a good number of students f
 
 		</div></font>
 	</footer>
-	</div>
+	
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
@@ -265,6 +272,19 @@ Every year this centre provides financial support to a good number of students f
 	<script src="js/magnific-popup-options.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5a957a524b401e45400d3f8a/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 	</body>
 </html>
