--- a/makerhub.html
+++ b/makerhub.html
@@ -26,6 +26,16 @@ Every year this centre provides financial support to a good number of students f
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
+		
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89026432-4"></script>
+			<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-89026432-4');
+			</script>
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400, 900" rel="stylesheet"> -->
 	<link href="images/FAVCON.png" rel="shortcut icon" type="image/png">
@@ -99,7 +109,7 @@ Every year this centre provides financial support to a good number of students f
 	<section id="gtco-about" data-section="about">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn"><br><br><br>
 				  <h1>Innovation and Entrepreneurship Development Centre</h1>
 				  <p class="sub text-justify">The Innovation and Entrepreneurship Development Centre (IEDC) is an initiative of National Science and Technology Entrepreneurship Development Board (NSTEDB), Department of Science and Technology (DST), New Delhi. The aim was to develop an institutional mechanism to create entrepreneurial culture in academic institutions to foster growth of innovation and entrepreneurship amongst the faculty and students.
 Every year this centre provides financial support to a good number of students for developing innovative products. Up to one lakh rupees is made available for each idea. Apart from this financial support we are providing mentoring and Infrastructural support for these projects.Also this centre arranges many classes and camps to promote technology based innovation and entrepreneurship among the students.</p>
@@ -236,7 +246,7 @@ Our management and empowered faculty members are trying to provide technology ba
 	<section id="gtco-our-team" data-section="our-team">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn"><br><br><br>
 					<h1>Our Team</h1>
 					<p class="sub">All our activities are closely monitored and guided by a group of dedicated faculty</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Our Team</p>
@@ -315,8 +325,8 @@ Our management and empowered faculty members are trying to provide technology ba
     	</section>
 			
 			<div class="row team-item gtco-team-reverse">
-			</div>
-       <p class="sub text-center">Backbone of IEDC activities are a group of dedicated students, they are lead by</p>
+			</div><br><br><br>
+       <p class="sub text-center">Backbone of IEDC activities are a group of dedicated students, they are lead by</p><br>
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="member">
@@ -391,7 +401,7 @@ Our management and empowered faculty members are trying to provide technology ba
         </div>
 
       </div>
-    </section>
+    </section><br><br><br>
     
     <!-- #team -->
 				
@@ -404,7 +414,7 @@ Our management and empowered faculty members are trying to provide technology ba
 		
 	</div>
 	<div class="col-lg-6 col-md-6">&nbsp;</div>
-	<div class="col-lg-6 col-md-6" data-animate-effect="fadeIn" align="right"><br>
+	<div class="col-lg-6 col-md-6" data-animate-effect="fadeIn" align="right">
 	<button type="button" class="btn btn-light animate-box fadeIn"><strong><a href="contact.html"><font color="#1B6BB5">Contact us</font></a></strong></button>
 		<button type="button" class="btn btn-light animate-box fadeIn"><strong><a href="https://goo.gl/maps/HDnw8c6icSA2"><font color="#1B6BB5">Visit us</font></a></strong></button>
 		<button type="button" class="btn btn-light animate-box fadeIn"><strong><font color="#1B6BB5">Gallery</font></strong></button>
@@ -539,6 +549,19 @@ Our management and empowered faculty members are trying to provide technology ba
 	<script src="js/magnific-popup-options.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5a957a524b401e45400d3f8a/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 	</body>
 </html>
