--- a/iprcell.html
+++ b/iprcell.html
@@ -169,13 +169,13 @@ Every year this centre provides financial support to a good number of students f
 			<section id="gtco-our-team" data-section="our-team" align="center">
     		<div class="container-fluid">
    			  <div class="row" align="center">
-		        <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
+		        <div class="col-md-4 col-sm-6 col-xs-12 wow fadeIn col-lg-push-4" data-wow-offset="50" data-wow-delay="1.3s">
     					<div class="team-wrapper">
     						<img src="images/jj.jpg" class="img-responsive" alt="team img 1">
-    							<div class="team-des" align="center">
+    							<div class="team-des" align="center"><br>
     							  
     					
-		          <h4>Dr. Jippu Jacob</h4>
+		          <h4><strong>Dr. Jippu Jacob</strong></h4>
 		          <p>Coordinator<br>
 		            IPR Cell of KSCSTE<br>
 		            +91 938 721 7984<br>+91 884 8496005
