--- a/makerhub.html
+++ b/makerhub.html
@@ -417,7 +417,7 @@ Our management and empowered faculty members are trying to provide technology ba
 	<div class="col-lg-6 col-md-6" data-animate-effect="fadeIn" align="right">
 	<button type="button" class="btn btn-light animate-box fadeIn"><strong><a href="contact.html"><font color="#1B6BB5">Contact us</font></a></strong></button>
 		<button type="button" class="btn btn-light animate-box fadeIn"><strong><a href="https://goo.gl/maps/HDnw8c6icSA2"><font color="#1B6BB5">Visit us</font></a></strong></button>
-		<button type="button" class="btn btn-light animate-box fadeIn"><strong><font color="#1B6BB5">Gallery</font></strong></button>
+		<!--<button type="button" class="btn btn-light animate-box fadeIn"><strong><font color="#1B6BB5">Gallery</font></strong></button>-->
 	</div>
 	</div>
 		</div>	
