--- a/iprws.html
+++ b/iprws.html
@@ -135,7 +135,7 @@ Every year this centre provides financial support to a good number of students f
     					</div>
     				</div>
 				  <div class="col-md-6col-sm-6 col-xs-6 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s" align="center">
-    						<img src="images/av.jpg" alt="team img 3" width="200" class="img-responsive img-thumbnail">
+    						<img src="images/am.jpg" alt="team img 3" width="200" class="img-responsive img-thumbnail">
     							<div class="team-des">
     							  <p><b>Ajo Mathew</b><br>
     							  +91 9446 532 835<br>ajomathew@amaljyothi.ac.in</p>
