--- a/iprws.html
+++ b/iprws.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Open Call for Office Bearers for Makerhub Amal Jyothi IEDC</title>
+	<title>KSCSTE IPR AWARENESS WORKSHOP</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Bergin S Russel">
 	<meta name="description" content="The Innovation and Entrepreneurship Development Centre (IEDC) is an initiative of National Science and Technology Entrepreneurship Development Board (NSTEDB), Department of Science and Technology (DST), New Delhi. The aim was to develop an institutional mechanism to create entrepreneurial culture in academic institutions to foster growth of innovation and entrepreneurship amongst the faculty and students.
