--- a/makerhub.html
+++ b/makerhub.html
@@ -72,7 +72,7 @@ Every year this centre provides financial support to a good number of students f
 	<nav class="gtco-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-2 col-xs-12">
+				<div class="col-sm-2 col-xs-12 col-lg-2">
 					<div id="gtco-logo"><a href="index.html">Maker<em>hub</em></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
@@ -218,8 +218,7 @@ Our management and empowered faculty members are trying to provide technology ba
 					</div>
 
 				</div>
-			</div>
-		</div>
+			
 		</section>
 		<section style="background: #1B6BB5">
 		<div class="container" >
